--- a/ixi_autoencoder_t1_t2.ipynb
+++ b/ixi_autoencoder_t1_t2.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#train the dataset\n",
     "t1_dir = r'D:/DS18/data/IXI-T1'\n",
     "t2_dir = r'D:/DS18/data/IXI-T2'\n",
     "t1_files = sorted(glob(os.path.join(t1_dir, '*.nii.gz')))\n",
