--- a/AE_T1-T2_singlechannel.ipynb
+++ b/AE_T1-T2_singlechannel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dataset class that loads each modality (T1 or T2) separately\n",
     "class SingleModalityNiftiDataset(Dataset):\n",
     "    def __init__(self, file_list):\n",
     "        self.file_list = file_list\n",
@@ -38,7 +37,7 @@
     "        image = np.expand_dims(image, axis=0)  # Add channel dimension\n",
     "        return torch.tensor(image, dtype=torch.float32)\n",
     "\n",
-    "# Define a simple 3D Autoencoder for single-channel input\n",
+    "\n",
     "class SingleChannelAutoencoder3D(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(SingleChannelAutoencoder3D, self).__init__()\n",
@@ -54,12 +53,17 @@
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
+    "        \"\"\"\n",
+    "        Forward pass through the autoencoder.\n",
+    "        :param x: Input tensor of shape [B, C, D, H, W]\n",
+    "        :return: Output tensor of the same shape as input\n",
+    "        \"\"\"\n",
     "        return self.decoder(self.encoder(x))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,28 +87,36 @@
     "val_dataset = SingleModalityNiftiDataset(val_files)\n",
     "train_loader = DataLoader(train_dataset, batch_size=1, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=1)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Prepare model and training configuration\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model = SingleChannelAutoencoder3D().to(device)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-5)\n",
     "loss_fn = nn.MSELoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 0.4535\n",
-      "Epoch 2/5, Loss: 0.2123\n",
-      "Epoch 3/5, Loss: 0.1982\n",
-      "Epoch 4/5, Loss: 0.1923\n",
-      "Epoch 5/5, Loss: 0.1887\n"
+      "Epoch 1/5, Loss: 0.3228\n",
+      "Epoch 2/5, Loss: 0.0405\n",
+      "Epoch 3/5, Loss: 0.0306\n",
+      "Epoch 4/5, Loss: 0.0276\n",
+      "Epoch 5/5, Loss: 0.0256\n"
      ]
     }
    ],
@@ -129,41 +141,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"AE_T1_single-channel_ixi_ep_1-5.pt\")"
+    "1. \"AE_T1_single-channel_ixi_ep_1-10.pt\" - baseline, noisy\n",
+    "2. \"AE_T1_10ep_v1.1.pt\" - first improvement to fix noise & extra bright, low dynamic range\n",
+    "3. \"AE_T1_10ep_v1.2.pt\" - as 2, restored tanh to decoder\n",
+    "4. \"AE_T1_10ep_v1.3.pt\" - went back to 2, no tanh decoder, err map created against normalized input => BAD RESULT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "latest_model_name = \"AE_T1_10ep_v1.4.pt\"\n",
+    "torch.save(model.state_dict(), latest_model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\DCervin\\AppData\\Local\\Temp\\ipykernel_36428\\805136706.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"AE_T1_single-channel_ixi_ep_1-5.pt\"))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 6/10, Loss: 0.1858\n",
-      "Epoch 7/10, Loss: 0.1834\n",
-      "Epoch 8/10, Loss: 0.1815\n",
-      "Epoch 9/10, Loss: 0.1799\n",
-      "Epoch 10/10, Loss: 0.1786\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\nmodel.load_state_dict(torch.load(\"AE_T1_single-channel_ixi_ep_1-5.pt\"))\\nmodel.to(device)\\n\\n# 2. Continue training for more epochs\\nextra_epochs = 5\\nfor epoch in range(n_epochs + 1, n_epochs + extra_epochs + 1):\\n    model.train()\\n    epoch_loss = 0\\n    for batch in train_loader:\\n        batch = batch.to(device)\\n        optimizer.zero_grad()\\n        recon = model(batch)\\n        loss = loss_fn(recon, batch)\\n        loss.backward()\\n        optimizer.step()\\n        epoch_loss += loss.item()\\n    avg_loss = epoch_loss / len(train_loader)\\n    print(f\"Epoch {epoch}/{n_epochs + extra_epochs}, Loss: {avg_loss:.4f}\")\\n'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 1. Load model checkpoint if saved\n",
+    "'''\n",
     "model.load_state_dict(torch.load(\"AE_T1_single-channel_ixi_ep_1-5.pt\"))\n",
     "model.to(device)\n",
     "\n",
@@ -181,7 +196,8 @@
     "        optimizer.step()\n",
     "        epoch_loss += loss.item()\n",
     "    avg_loss = epoch_loss / len(train_loader)\n",
-    "    print(f\"Epoch {epoch}/{n_epochs + extra_epochs}, Loss: {avg_loss:.4f}\")\n"
+    "    print(f\"Epoch {epoch}/{n_epochs + extra_epochs}, Loss: {avg_loss:.4f}\")\n",
+    "'''"
    ]
   },
   {
@@ -190,39 +206,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"AE_T1_single-channel_ixi_ep_1-10.pt\")"
+    "#torch.save(model.state_dict(), \"AE_T1_single-channel_ixi_ep_1-10.pt\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Load & test"
+    "# Inference: Reconstruct and Generate Heatmap with Proper Denormalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import SimpleITK as sitk\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "import torch.nn as nn"
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DCervin\\AppData\\Local\\Temp\\ipykernel_36428\\1448568010.py:7: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\DCervin\\AppData\\Local\\Temp\\ipykernel_23904\\379856716.py:7: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load(model_path, map_location=device))\n"
      ]
     }
@@ -232,7 +244,7 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model = SingleChannelAutoencoder3D().to(device)\n",
     "\n",
-    "model_path = \"AE_T1_single-channel_ixi_ep_1-10.pt\"\n",
+    "model_path = latest_model_name\n",
     "if Path(model_path).exists():\n",
     "    model.load_state_dict(torch.load(model_path, map_location=device))\n",
     "    model.eval()\n",
@@ -242,7 +254,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,49 +272,72 @@
     "input_arr = sitk.GetArrayFromImage(input_img).astype(np.float32)\n",
     "\n",
     "# Normalize input\n",
-    "normalized_input = (input_arr - np.mean(input_arr)) / (np.std(input_arr) + 1e-5)\n",
+    "mean, std = np.mean(input_arr), np.std(input_arr)\n",
+    "normalized_input = (input_arr - mean) / (std + 1e-5)\n",
     "normalized_input = np.clip(normalized_input, -3, 3)\n",
-    "input_tensor = torch.tensor(normalized_input[None, None, ...], dtype=torch.float32).to(device)\n"
+    "input_tensor = torch.tensor(normalized_input[None, None, ...], dtype=torch.float32).to(device)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('reconstructed_volume.nii.gz', 'error_heatmap.nii.gz')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reconstruct\n",
     "with torch.no_grad():\n",
     "    reconstructed = model(input_tensor).cpu().numpy()[0, 0]\n",
     "\n",
-    "# Compute reconstruction error map\n",
-    "error_map = np.square(normalized_input - reconstructed).astype(np.float32)\n",
+    "# Denormalize reconstruction\n",
+    "reconstructed_denorm = reconstructed * (std + 1e-5) + mean\n",
+    "\n",
+    "# Compute error map in original scale\n",
+    "#error_map = np.abs(input_arr - reconstructed_denorm).astype(np.float32)\n",
+    "error_map = np.abs(normalized_input - reconstructed).astype(np.float32)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('normalized_input_volume.nii.gz',\n",
+       " 'reconstructed_volume.nii.gz',\n",
+       " 'error_heatmap.nii.gz')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
     "# Convert to SimpleITK images\n",
+    "#recon_img = sitk.GetImageFromArray(reconstructed_denorm)\n",
     "recon_img = sitk.GetImageFromArray(reconstructed)\n",
     "recon_img.CopyInformation(input_img)\n",
     "\n",
     "error_img = sitk.GetImageFromArray(error_map)\n",
     "error_img.CopyInformation(input_img)\n",
     "\n",
+    "normalized_input_img = sitk.GetImageFromArray(normalized_input)\n",
+    "normalized_input_img.CopyInformation(input_img)\n",
+    "\n",
     "# Save outputs\n",
+    "norm_input_path = \"normalized_input_volume.nii.gz\"\n",
     "recon_out_path = \"reconstructed_volume.nii.gz\"\n",
     "error_out_path = \"error_heatmap.nii.gz\"\n",
+    "sitk.WriteImage(normalized_input_img, norm_input_path)\n",
     "sitk.WriteImage(recon_img, recon_out_path)\n",
     "sitk.WriteImage(error_img, error_out_path)\n",
     "\n",
-    "recon_out_path, error_out_path"
+    "norm_input_path, recon_out_path, error_out_path"
    ]
   },
   {
