--- a/Split_NIFTI.ipynb
+++ b/Split_NIFTI.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import SimpleITK as sitk\n",
-    "from glob import glob\n"
+    "from glob import glob\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -640,6 +641,47 @@
     "        print(f\"✅ Resampled {filename} to {target_size}\")\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load input volume\n",
+    "#input_path = r\"D:\\DS18\\data\\IXI-T1_resampled\\IXI002-Guys-0828-T1.nii.gz\"\n",
+    "input_path = r\"D:\\DS18\\data\\BrainTumour\\imagesTr\\T1_resampled\\BRATS_001_T1.nii.gz\"\n",
+    "input_img = sitk.ReadImage(input_path)\n",
+    "input_arr = sitk.GetArrayFromImage(input_img).astype(np.float32)\n",
+    "\n",
+    "# Normalize input\n",
+    "mean, std = np.mean(input_arr), np.std(input_arr)\n",
+    "normalized_input = (input_arr - mean) / (std + 1e-5)\n",
+    "\n",
+    "normalized_input = np.clip(normalized_input, -1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = r\"D:\\DS18\\data\\IXI-T1_resampled\\IXI002-Guys-0828-T1.nii.gz\"\n",
+    "\n",
+    "input_img = sitk.ReadImage(path)\n",
+    "image_arr = sitk.GetArrayFromImage(input_img).astype(np.float32)\n",
+    "mean, std = np.mean(image_arr), np.std(image_arr)\n",
+    "image_arr = (image_arr - mean) / (std + 1e-5)\n",
+    "image_arr = np.clip(image_arr, -1, 1)  # Match to output range\n",
+    "\n",
+    "\n",
+    "\n",
+    "rescaled_arr = image_arr * (std + 1e-5) + mean\n",
+    "rescaled_img = sitk.GetImageFromArray(rescaled_arr)\n",
+    "rescaled_img.CopyInformation(input_img)\n",
+    "sitk.WriteImage(rescaled_img, \"rescaled_output.nii.gz\")"
    ]
   }
  ],
