--- a/AE_T1-T2_singlechannel.ipynb
+++ b/AE_T1-T2_singlechannel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,29 @@
     "    def __len__(self):\n",
     "        return len(self.file_list)\n",
     "\n",
+    "    '''\n",
     "    def __getitem__(self, idx):\n",
     "        path = self.file_list[idx]\n",
     "        image = sitk.GetArrayFromImage(sitk.ReadImage(path)).astype(np.float32)\n",
     "        image = (image - np.mean(image)) / (np.std(image) + 1e-5)\n",
-    "        image = np.clip(image, -3, 3)\n",
+    "        image = np.clip(image, -1, 1)\n",
     "        image = np.expand_dims(image, axis=0)  # Add channel dimension\n",
     "        return torch.tensor(image, dtype=torch.float32)\n",
+    "    '''\n",
+    "    def __getitem__(self, idx):\n",
+    "        path = self.file_list[idx]\n",
+    "        image = sitk.GetArrayFromImage(sitk.ReadImage(path)).astype(np.float32)\n",
     "\n",
+    "        # Z-score normalization\n",
+    "        mean, std = np.mean(image), np.std(image)\n",
+    "        zscore_img = (image - mean) / (std + 1e-5)\n",
+    "\n",
+    "        # Min-max normalization to [0, 1]\n",
+    "        z_min, z_max = np.min(zscore_img), np.max(zscore_img)\n",
+    "        normalized_img = (zscore_img - z_min) / (z_max - z_min)\n",
+    "\n",
+    "        normalized_img = np.expand_dims(normalized_img, axis=0)  # [C, H, W, D]\n",
+    "        return torch.tensor(normalized_img, dtype=torch.float32)\n",
     "\n",
     "class SingleChannelAutoencoder3D(nn.Module):\n",
     "    def __init__(self):\n",
@@ -63,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,31 +107,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare model and training configuration\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "model = SingleChannelAutoencoder3D().to(device)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-5)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
     "loss_fn = nn.MSELoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 0.3228\n",
-      "Epoch 2/5, Loss: 0.0405\n",
-      "Epoch 3/5, Loss: 0.0306\n",
-      "Epoch 4/5, Loss: 0.0276\n",
-      "Epoch 5/5, Loss: 0.0256\n"
+      "Epoch 1/5, Loss: 0.0384\n",
+      "Epoch 2/5, Loss: 0.0040\n",
+      "Epoch 3/5, Loss: 0.0030\n",
+      "Epoch 4/5, Loss: 0.0025\n",
+      "Epoch 5/5, Loss: 0.0022\n"
      ]
     }
    ],
@@ -147,35 +162,27 @@
     "1. \"AE_T1_single-channel_ixi_ep_1-10.pt\" - baseline, noisy\n",
     "2. \"AE_T1_10ep_v1.1.pt\" - first improvement to fix noise & extra bright, low dynamic range\n",
     "3. \"AE_T1_10ep_v1.2.pt\" - as 2, restored tanh to decoder\n",
-    "4. \"AE_T1_10ep_v1.3.pt\" - went back to 2, no tanh decoder, err map created against normalized input => BAD RESULT"
+    "4. \"AE_T1_10ep_v1.3.pt\" - went back to 2, no tanh decoder, err map created against normalized input => BAD RESULT\n",
+    "5. \"AE_T1_10ep_v1.4.pt\" - reasonable...\n",
+    "6. \"AE_T1_10ep_v1.5.pt\" - learning rate lr=1e-5, normalize & clip (-3,3)\n",
+    "7. \"AE_T1_10ep_v1.6.pt\" - learning rate lr=1e-4, min/mas & z-score normalization =>BAD, go back to 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "latest_model_name = \"AE_T1_10ep_v1.4.pt\"\n",
+    "latest_model_name = \"AE_T1_10ep_v1.6.pt\"\n",
     "torch.save(model.state_dict(), latest_model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nmodel.load_state_dict(torch.load(\"AE_T1_single-channel_ixi_ep_1-5.pt\"))\\nmodel.to(device)\\n\\n# 2. Continue training for more epochs\\nextra_epochs = 5\\nfor epoch in range(n_epochs + 1, n_epochs + extra_epochs + 1):\\n    model.train()\\n    epoch_loss = 0\\n    for batch in train_loader:\\n        batch = batch.to(device)\\n        optimizer.zero_grad()\\n        recon = model(batch)\\n        loss = loss_fn(recon, batch)\\n        loss.backward()\\n        optimizer.step()\\n        epoch_loss += loss.item()\\n    avg_loss = epoch_loss / len(train_loader)\\n    print(f\"Epoch {epoch}/{n_epochs + extra_epochs}, Loss: {avg_loss:.4f}\")\\n'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. Load model checkpoint if saved\n",
     "'''\n",
@@ -218,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,14 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DCervin\\AppData\\Local\\Temp\\ipykernel_23904\\379856716.py:7: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\DCervin\\AppData\\Local\\Temp\\ipykernel_13092\\379856716.py:7: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model.load_state_dict(torch.load(model_path, map_location=device))\n"
      ]
     }
@@ -261,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,16 +279,26 @@
     "input_arr = sitk.GetArrayFromImage(input_img).astype(np.float32)\n",
     "\n",
     "# Normalize input\n",
+    "#mean, std = np.mean(input_arr), np.std(input_arr)\n",
+    "#normalized_input = (input_arr - mean) / (std + 1e-5)\n",
+    "#normalized_input = np.clip(normalized_input, -3, 3)\n",
+    "\n",
+    "# Z-score normalization\n",
     "mean, std = np.mean(input_arr), np.std(input_arr)\n",
-    "normalized_input = (input_arr - mean) / (std + 1e-5)\n",
-    "normalized_input = np.clip(normalized_input, -3, 3)\n",
+    "zscore_img = (input_arr - mean) / (std + 1e-5)\n",
+    "\n",
+    "# Min-max normalization to [0, 1]\n",
+    "z_min, z_max = np.min(zscore_img), np.max(zscore_img)\n",
+    "normalized_input = (zscore_img - z_min) / (z_max - z_min)\n",
+    "\n",
+    "\n",
     "input_tensor = torch.tensor(normalized_input[None, None, ...], dtype=torch.float32).to(device)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +328,7 @@
        " 'error_heatmap.nii.gz')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
